<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">movebuttontest</string>

    <string name="animationDuration">Animation duration</string>
    <string name="startStateChangeAnimation">Start state-change animation</string>
    <string name="startArrowAnimation">Start arrow animation</string>
    <string name="startAlphaAnimation">Start alpha animation</string>

    <string name="animationType">Animation type:</string>
    <string name="animType_arrowToCross">Arrow-to-cross</string>
    <string name="animType_voidToArrow">Void-to-arrow</string>

    <string name="newVisualState">New visual state:</string>
    <string name="visualState_enabled">Enabled</string>
    <string name="visualState_pressed">Pressed</string>

    <string name="arrowStrokeWidth">Stroke width:</string>
</resources>